--- a/app/index.html
+++ b/app/index.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-      <title>CardinalToken Wallet</title>
+      <title>Twerify</title>
       <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
       <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
       <script src="https://dapps.stanford.edu/web3/web3-1.0.0-beta.34.min.js"></script>
@@ -9,7 +9,7 @@
    </head>
    <body>
        <div class="container">
-           <h1>CardinalToken Wallet</h1>
+           <h1>Twerify</h1>
            <h2 id="display"></h2>
            <img id="loader" src="https://loading.io/spinners/pacman/lg.eat-bean-pie-loading-gif.gif">
            <label for="address" class="col-lg-2 control-label">Send to address</label>
