--- a/app/index.html
+++ b/app/index.html
@@ -6,18 +6,26 @@
       <script src="https://dapps.stanford.edu/web3/web3-1.0.0-beta.34.min.js"></script>
       <script src="js/app.js"></script>
       <link rel="stylesheet" type="text/css" href="css/app.css">
+      <meta charset="utf-8">
+      <script language="javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.6.4/jquery.min.js"></script>
+
+      <script type="text/javascript" src="http://platform.twitter.com/widgets.js"></script>
+
+      <script type='text/javascript'>
+      $(document).ready(function(){
+          $.getJSON("https://api.twitter.com/1/statuses/oembed.json?id=992522016120025088&align=center&callback=?",
+              function(data){$('#tweet123').html(data.html);});
+      });
+      </script>
    </head>
    <body>
        <div class="container">
            <h1>Twerify</h1>
-           <h2 id="display"></h2>
-           <img id="loader" src="https://loading.io/spinners/pacman/lg.eat-bean-pie-loading-gif.gif">
-           <label for="address" class="col-lg-2 control-label">Send to address</label>
-           <input id="address" type="text">
-           <label for="amount" class="col-lg-2 control-label">Amount</label>
-           <input id="amount" type="text">
-           <button id="button">Give'em</button>
-           <button id="mint-button">Mint'em</button>
+           <div id='tweet123'></div> 
+         <h2>Is this user a bot?</h2>
+         <label for="amount" class="col-lg-2 control-label">Amount</label>
+         <input id="amount" type="text">
+         <button id="button">Stake</button>
        </div>
    </body>
 </html>
