Add webpages for creators and cosumers.

--- a/app/consume.html
+++ b/app/consume.html
@@ -19,14 +19,6 @@
       </script>
    </head>
    <body>
-      <div class="containerHome">
-        <h1>Welcome to Twerify</h1>
-        <form action="creator.html">
-          <button id="button" class="inputButton" href="creator.html">Create Personal Content Token</button>
-        </form>
-        <form action="consume.html">
-          <button id="button" class="inputButton">View Content</button>
-        </form>
-      </div>
+      Placeholder for consumer demo
    </body>
 </html>
