--- a/app/creator.html
+++ b/app/creator.html
@@ -15,7 +15,7 @@
        <div class="container">
          <h1>Create Personal Token</h1>
          <div class="creatorInput">
-           <label for="amount" class="col-lg-2 control-label pricePerToken">Price Per Token</label>
+           <label for="amount" class="col-lg-2 control-label pricePerToken">Price Per Token (ETH / token)</label>
            <input id="amount" type="text">
            <button id="generateButton" class="generateButton">Generate</button>
          </div>
