--- a/app/index.html
+++ b/app/index.html
@@ -22,10 +22,10 @@
       <div class="containerHome">
         <h1>Welcome to Twerify</h1>
         <form action="creator.html">
-          <button id="button" class="inputButton" href="creator.html">Create Personal Content Token</button>
+          <button id="buttonCreator" class="inputButton" href="creator.html">Create Personal Content Token</button>
         </form>
         <form action="consume.html">
-          <button id="button" class="inputButton">View Content</button>
+          <button id="buttonConsumer" class="inputButton">View Content</button>
         </form>
       </div>
    </body>
