--- a/app/index.html
+++ b/app/index.html
@@ -22,7 +22,7 @@
       <div class="containerHome">
         <h1>Welcome to Twerify</h1>
         <form action="creator.html">
-          <button id="buttonCreator" class="inputButton" href="creator.html">Create Personal Content Token</button>
+          <button id="buttonCreator" class="inputButton" href="creator.html">Upload Content</button>
         </form>
         <form action="consume.html">
           <button id="buttonConsumer" class="inputButton">View Content</button>
