--- a/app/consume.html
+++ b/app/consume.html
@@ -10,8 +10,18 @@
       <script language="javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.6.4/jquery.min.js"></script>
    </head>
    <body>
-      <div class="content" id="cryptoMeme" style="display:none">
-        <img src="cryptomeme.jpeg" alt="Crypto Meme">
+      <div class="song" id="song">
+        <!-- <img src="cryptomeme.jpeg" alt="Crypto Meme">  style="display:none" -->
+
+        <h1>Your Music</h1>
+
+        <!-- Display tokens -->
+
+        <audio controls style="width: 90%;">
+          <source src="Blue.mp3" type="audio/mpeg">
+        </audio>
       </div>
+
+
    </body>
 </html>
