--- a/app/consume.html
+++ b/app/consume.html
@@ -10,7 +10,7 @@
       <script language="javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.6.4/jquery.min.js"></script>
    </head>
    <body>
-      <div class="song" id="song">
+      <div class="song" id="song" style="display:none">
         <!-- <img src="cryptomeme.jpeg" alt="Crypto Meme">  style="display:none" -->
 
         <h1>Your Music</h1>
@@ -22,6 +22,18 @@
         </audio>
       </div>
 
+      <div class="buyToken" id="buyToken" style="display:none">
+        <!-- <img src="cryptomeme.jpeg" alt="Crypto Meme">  style="display:none" -->
+
+        You cannot view this content without owning the artist token.
+
+        <p>Would you like to purchase token?</p>
+
+        <button id="purchaseToken" class="generateButton">Purchase</button>
+        <div class="tokenPurchased" id="tokenPurchased" style="display:none">
+          <h2>Tokens Purchased!</h2>
+        </div>
+      </div>
 
    </body>
 </html>
