--- a/app/index.html
+++ b/app/index.html
@@ -4,7 +4,7 @@
       <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
       <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
       <script src="https://dapps.stanford.edu/web3/web3-1.0.0-beta.34.min.js"></script>
-      <script src="js/app.js"></script>
+      <script src="js/bundle.js"></script>
       <link rel="stylesheet" type="text/css" href="css/app.css">
       <meta charset="utf-8">
       <script language="javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.6.4/jquery.min.js"></script>
@@ -19,6 +19,42 @@
       </script>
    </head>
    <body>
+          <!-- METAMASK NOT INSTALLED  -->
+
+      <div class="container" id="metamask-install" style="display:none">
+        <div class="row" style="margin: 50 0 50 0px">
+          <div class="col-md-12 text-center">
+            <h2>You need to install Metamask</h2>
+            <p>It looks like you're not using an ethereum enabled browser.  The simplest way to solve this is to</p>
+            <h4><a href="https://metamask.io/">Download Metamask</a></h4>
+            <p>You will need to install Metamask and then refresh this page.  If you are using the live ethereum network then you will also need to pay for some ether in your account.</p>
+          </div>
+        </div>
+      </div>
+
+      <!-- METAMASK NOT LOGGED IN  -->
+
+      <div class="container" id="metamask-login" style="display:none">
+        <div class="row" style="margin: 50 0 50 0px">
+          <div class="col-md-12 text-center">
+            <h2>You are not logged in to Metamask</h2>
+            <p>It looks like you have Metamask installed but you are not logged in.  Please log in and refresh the page</p>
+          </div>
+        </div>
+      </div>
+
+      <!-- WRONG NETWORK  -->
+
+      <div class="container" id="metamask-network" style="display:none">
+        <div class="row" style="margin: 50 0 50 0px">
+          <div class="col-md-12 text-center">
+            <h2>Please use Ropsten Network</h2>
+            <p>This dapp is only available on the Ropsten network at the moment, please switch network in the top left hand corner of MetaMask.</p>
+            <p>You can then <a href="https://faucet.metamask.io/">collect some free ether from the faucet here</a>.</p>
+          </div>
+        </div>
+      </div>
+
       <div class="containerHome">
         <h1>Welcome to Twerify</h1>
         <form action="creator.html">
