--- a/app/creator.html
+++ b/app/creator.html
@@ -4,7 +4,7 @@
       <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
       <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
       <script src="https://dapps.stanford.edu/web3/web3-1.0.0-beta.34.min.js"></script>
-      <script src="js/app.js"></script>
+      <script src="js/bundle.js"></script>
       <link rel="stylesheet" type="text/css" href="css/app.css">
       <meta charset="utf-8">
       <script language="javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.6.4/jquery.min.js"></script>
