--- a/app/consume.html
+++ b/app/consume.html
@@ -20,6 +20,9 @@
         <audio controls style="width: 90%;">
           <source src="Blue.mp3" type="audio/mpeg">
         </audio>
+
+        <button id="checkBalance" class = "generateButton">Check Balance</button>
+        <div id="display" style="display:none">
       </div>
 
       <div class="buyToken" id="buyToken" style="display:none">
