Finished access check

--- a/app/consume.html
+++ b/app/consume.html
@@ -22,7 +22,7 @@
         </audio>
 
         <button id="checkBalance" class = "generateButton">Check Balance</button>
-        <div id="display" style="display:none">
+        <div id="display" style="display:none"></div>
       </div>
 
       <div class="buyToken" id="buyToken" style="display:none">
