--- a/app/consume.html
+++ b/app/consume.html
@@ -21,7 +21,7 @@
           <source src="Blue.mp3" type="audio/mpeg">
         </audio>
 
-        <button id="checkBalance" class = "generateButton">Check Balance</button>
+        <button id="checkBalance" class = "checkBalanceButton"> Check Balance </button>
         <div id="display" style="display:none"></div>
       </div>
 
