--- a/app/creator.html
+++ b/app/creator.html
@@ -19,27 +19,30 @@
             <div>
               <!-- <label for="file">Choose file to upload</label> -->
               <!-- <input type="file" id="musicFile" name="file" accept=".mp3" onchange="readFile(this.files);"> -->
-              <input  id="audioFileChooser" type="file" onchange="readFile(this.files);">
-              <script>
-                function readFile(files) {
-                  var fileReader = new FileReader();
-                    fileReader.readAsArrayBuffer(files[0]);
-                    fileReader.onload = function(e) {
-                      playAudioFile(e.target.result);
-                      console.log(("Filename: '" + files[0].name + "'"), ( "(" + ((Math.floor(files[0].size/1024/1024*100))/100) + " MB)" ));
-                    }
-                }
-                function playAudioFile(file) {
-                  var context = new window.AudioContext();
-                    context.decodeAudioData(file, function(buffer) {
-                      var source = context.createBufferSource();
-                        source.buffer = buffer;
-                        source.loop = false;
-                        source.connect(context.destination);
-                        source.start(0); 
-                    });
-                }
-              </script>
+              <form action="/upload" method="POST">
+                <input  id="audioFileChooser" type="file" onchange="readFile(this.files);">
+                <script>
+                  function readFile(files) {
+                    var fileReader = new FileReader();
+                      fileReader.readAsArrayBuffer(files[0]);
+                      fileReader.onload = function(e) {
+                        playAudioFile(e.target.result);
+                        console.log(("Filename: '" + files[0].name + "'"), ( "(" + ((Math.floor(files[0].size/1024/1024*100))/100) + " MB)" ));
+                      }
+                  }
+                  function playAudioFile(file) {
+                    var context = new window.AudioContext();
+                      context.decodeAudioData(file, function(buffer) {
+                        var source = context.createBufferSource();
+                          source.buffer = buffer;
+                          source.loop = false;
+                          source.connect(context.destination);
+                          source.start(0); 
+                      });
+                  }
+                </script>
+                <button type="submit">Upload</button>
+              </form>
             </div>
            <label for="pricePerToken" class="col-lg-2 control-label pricePerToken">Price Per Token (ETH / token)</label>
            <input id="pricePerToken" type="text">
