--- a/app/index.html
+++ b/app/index.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-      <title>Twerify</title>
+      <title>TicketTokens</title>
       <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
       <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
       <script src="https://dapps.stanford.edu/web3/web3-1.0.0-beta.34.min.js"></script>
